--- a/website/index.html
+++ b/website/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <nav class="nav">
                     <a href="#about">О нас</a>
-                    <a href="#services">Услуги</a>
+                    <a href="#pricelist">Прайс-лист</a>
                     <a href="#booking">Запись</a>
                     <a href="#contacts">Контакты</a>
                 </nav>
@@ -65,10 +65,6 @@
                             <span class="feature-icon">🌿</span>
                             <span>Гипоаллергенные средства</span>
                         </div>
-                        <div class="feature">
-                            <span class="feature-icon">🎁</span>
-                            <span>Подарок после первой стрижки</span>
-                        </div>
                     </div>
                 </div>
                 <div class="about-image">
@@ -78,10 +74,11 @@
         </div>
     </section>
 
-    <!-- Услуги -->
-    <section id="services" class="services">
+    <!-- Прайс-лист -->
+    <section id="pricelist" class="services">
         <div class="container">
-            <h2>Наши услуги</h2>
+            <h2>ПРАЙС-ЛИСТ</h2>
+            <p class="section-subtitle">Наши услуги для детей до 12 лет</p>
             <div class="services-grid" id="services-grid">
                 <!-- Услуги загружаются через JavaScript -->
             </div>
@@ -118,7 +115,7 @@
                         </div>
                         <div class="form-group">
                             <label for="client-age">Возраст *</label>
-                            <input type="number" id="client-age" min="0" max="18" required placeholder="Возраст ребёнка">
+                            <input type="number" id="client-age" min="0" max="12" required placeholder="Возраст ребёнка">
                         </div>
                         <div class="form-group">
                             <label for="parent-name">Имя родителя *</label>
@@ -126,7 +123,7 @@
                         </div>
                         <div class="form-group">
                             <label for="phone">Телефон *</label>
-                            <input type="tel" id="phone" value="+79507050964" required placeholder="+7 (XXX) XXX-XX-XX">
+                            <input type="tel" id="phone" required placeholder="+7 (950) 705-09-64" value="+79507050964">
                         </div>
                         <div class="form-group">
                             <label for="service">Услуга *</label>
@@ -190,7 +187,7 @@
                 </div>
                 <div class="footer-links">
                     <a href="#about">О нас</a>
-                    <a href="#services">Услуги</a>
+                    <a href="#pricelist">Прайс-лист</a>
                     <a href="#booking">Запись</a>
                     <a href="#contacts">Контакты</a>
                 </div>
